--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,11 +17,13 @@
   }
 }
 
-body {
-  /* background: var(--background); */
-  color: var(--foreground);
+html {
+  height: 100%;
 }
 
+body {
+  color: var(--foreground);
+}
 
 .custom-scroll::-webkit-scrollbar {
   width: 6px;
